# portfolio-tracker

./: .ghcid  .gitignore  CHANGELOG.md  package.yaml  portfolio-tracker.cabal  shell.nix
app/: Main.hs
config/: models
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
nix/: header.nix  postgres-conf.nix  project.nix  shell.nix  sources.json  test-deps.nix
src/PortfolioTracker/: HttpClient.hs  Run.hs
src/PortfolioTracker/Data/: Currency.hs
src/PortfolioTracker/Storage/: Model.hs
test/: Main.hs  TestSpec.hs
