cabal-version:      2.4
name:               portfolio-tracker
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Mikhail Prushinskiy
maintainer:         mikhail.prushinskiy@heathmont.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable portfolio-tracker
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
